# iola-hermes

./: README.md  docker-compose.windows.yml  package-lock.json  package.json  pyproject.toml  run_agent.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: build-windows-installer.yml  contributor-check.yml  deploy-site.yml  desktop-release.yml  docker-lint.yml  docker-publish.yml  docs-site-checks.yml  history-check.yml  lint.yml  osv-scanner.yml  publish-npm.yml  skills-index-freshness.yml  skills-index.yml  supply-chain-audit.yml  tauri-desktop-release.yml  tests.yml  typecheck.yml  upload_to_pypi.yml  uv-lockfile-check.yml
acp_registry/: agent.json
agent/: agent_init.py  auxiliary_client.py  i18n.py  process_bootstrap.py  prompt_builder.py
apps/bootstrap-installer/: package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: main.rs
docs/: iola-provider-roadmap.md
gateway/: slash_commands.py
hermes_cli/: __init__.py  _parser.py  auth.py  banner.py  cli_commands_mixin.py  commands.py  completion.py  config.py  default_soul.py  doctor.py  fallback_cmd.py  gateway.py  gateway_windows.py  kanban.py  kanban_db.py  main.py  model_catalog.py  model_setup_flows.py  model_switch.py  models.py  portal_cli.py  provider_catalog.py  pty_bridge.py  setup.py  setup_whatsapp_cloud.py  skin_engine.py  status.py  telegram_managed_bot.py  tools_config.py  uninstall.py  web_server.py
providers/: base.py
scripts/: build_model_catalog.py  contributor_audit.py  hermes-gateway  install.cmd  install.ps1  install.sh  release.py  run_tests_parallel.py  setup_open_webui.sh
tests/: test_termux_all_extra_compat.py
tools/: lazy_deps.py  send_message_tool.py
web/: README.md  index.html
website/: package-lock.json  package.json
(+154 files in other folders)
