[package]
name = "iola-hermes-desktop-tauri"
version = "0.17.2"
description = "Экспериментальная Tauri-оболочка Hermes RU Iola"
authors = ["Yakunin"]
license = "MIT"
repository = "https://github.com/yasg1988/iola-hermes"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
portable-pty = "0.8"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
