[package]
name = "iola-hermes-desktop-tauri"
version = "0.17.2"
description = "Легкое desktop-приложение Hermes RU Iola"
authors = ["Yakunin"]
license = "MIT"
repository = "https://github.com/yasg1988/iola-hermes"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "8.2.0"
open = "5"
portable-pty = "0.8"
percent-encoding = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-notification = "2"
